// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<P /> dark: renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#fcfcfc",
        "fontFamily": "Open Sans",
      },
      Array [
        Object {
          "fontFamily": "Open Sans",
          "fontSize": 12,
          "fontWeight": "400",
          "marginBottom": 16,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        },
        undefined,
      ],
    ]
  }
/>
`;

exports[`<P /> light: renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "Open Sans",
      },
      Array [
        Object {
          "fontFamily": "Open Sans",
          "fontSize": 12,
          "fontWeight": "400",
          "marginBottom": 16,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        },
        undefined,
      ],
    ]
  }
/>
`;

exports[`<P /> renders component when passed in 1`] = `
<Styled(Text)>
  <Component />
</Styled(Text)>
`;

exports[`<P /> renders text when passed in 1`] = `
<Styled(Text)>
  Test
</Styled(Text)>
`;
